--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://aleeeguevara.github.io/rick-and-morty-api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
@@ -50,6 +53,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.0.5"
   }
 }
